Addex z-indexes to header and list of Divisions so that the header's expanded Electorate Finder sits in the correct z order.

--- a/src/components/Divisions/styles.scss
+++ b/src/components/Divisions/styles.scss
@@ -7,6 +7,18 @@
 
 .root {
   padding-top: 0.75rem;
+
+  & > * {
+    position: relative;
+
+    &:first-child {
+      z-index: 1;
+    }
+
+    &:last-child {
+      z-index: 0;
+    }
+  }
 }
 
 .header {
@@ -57,7 +69,7 @@
   &::after {
     content: '';
     position: absolute;
-    top: 0.25rem;
+    top: 0.125rem;
     right: 0;
     width: 0.875rem;
     height: 0.875rem;
